RESOLVED FIXED221598
REGRESSION(r263255): Text styles without an explicit language tag do not honor the system language
https://bugs.webkit.org/show_bug.cgi?id=221598
Summary REGRESSION(r263255): Text styles without an explicit language tag do not hono...
Myles C. Maxfield
Reported 2021-02-09 00:58:46 PST
REGRESSION(r263255): Text styles without an explicit language tag do not honor the system language
Attachments
Patch (4.25 KB, patch)
2021-02-09 01:01 PST, Myles C. Maxfield
zalan: review+
ews-feeder: commit-queue-
Patch for committing (4.25 KB, patch)
2021-02-09 20:50 PST, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2021-02-09 01:01:27 PST
Myles C. Maxfield
Comment 2 2021-02-09 01:02:11 PST
Myles C. Maxfield
Comment 3 2021-02-09 20:31:13 PST
Comment on attachment 419687 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=419687&action=review > LayoutTests/fast/text/international/system-language/jp-circled.html:1 > +<!DOCTYPE html><!-- webkit-test-runner [ language=jp ] --> Oh, I think this has to be ja instead of jp
Myles C. Maxfield
Comment 4 2021-02-09 20:50:44 PST
Created attachment 419810 [details] Patch for committing
EWS
Comment 5 2021-02-10 07:44:14 PST
Committed r272652: <https://commits.webkit.org/r272652> All reviewed patches have been landed. Closing bug and clearing flags on attachment 419810 [details].
Darin Adler
Comment 6 2021-02-10 11:17:10 PST
Comment on attachment 419810 [details] Patch for committing View in context: https://bugs.webkit.org/attachment.cgi?id=419810&action=review > Source/WebCore/ChangeLog:9 > + The distinction between NULL and CFSTR("") strikes again! Should we add the CF equivalent of nsStringNilIfEmpty?
Note You need to log in before you can comment on or make changes to this bug.