REGRESSION(r263255): Text styles without an explicit language tag do not honor the system language https://bugs.webkit.org/show_bug.cgi?id=221598 <rdar://problem/69194294>

Reviewed by Zalan Bujtas.

Source/WebCore:

The distinction between NULL and CFSTR("") strikes again!

Test: fast/text/international/system-language/jp-circled.html

* platform/graphics/cocoa/SystemFontDatabaseCoreText.cpp:
(WebCore::SystemFontDatabaseCoreText::createTextStyleFont):

LayoutTests:

* fast/text/international/system-language/jp-circled-expected-mismatch.html: Added.
* fast/text/international/system-language/jp-circled.html: Added.


Canonical link: https://commits.webkit.org/233911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272652 268f45cc-cd09-0410-ab3c-d52691b4dbfc